refactored html & fixed spacing issues in scss

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -8,6 +8,11 @@
   box-shadow: 0.1rem 0.1rem 0.7rem lighten(color(black), 40%);
   outline: 0;
   border: 0;
+  margin: 0 5rem;
+
+  @include responsive(md) {
+    margin: 0;
+  }
 }
 
 .btn--primary {
